# strashAPI-CPPClient

./: CMakeLists.txt  Dockerfile  Makefile
dock/config/: mirrorlist
includes/: ApiClient.h  ConfigReader.h  Query.h  QueryFactory.h  ThreadPool.h  errors.h  utils.h
src/: ApiClient.cpp  ConfigReader.cpp  Query.cpp  ThreadPool.cpp
tests/: CMakeLists.txt  private.key.pub
tests/compose/: docker-compose.yml
tests/compose/test-api/: .dockerignore  Dockerfile  public.key  test-api.js  token_stuff.js
tests/data/: actually_not.test.json  bogus_config.test.json  config.json  no_key_bogus.test.json  other_bogus.test.json  private.key  real_strashbot.test.json  test-api.test.json
tests/includes/: test_apiCompose.h  test_error.h  test_simpleStrashBotRealGetRequest.h
tests/misc/: wait_lock.compose.sh
tests/src/: test_apiCompose.cpp  test_configReader.cpp  test_error.cpp  test_query.cpp  test_simpleStrashBotRealGetRequest.cpp
